Fixed css on smaller resolutions

--- a/css/docs.css
+++ b/css/docs.css
@@ -1,67 +1,111 @@
-body {
-  font-family: 'Roboto Mono', sans-serif;
+    body {
+      font-family: 'Roboto Mono', sans-serif;
+    }
+
+      .md_container pre {
+      background-color: #21415a;
+      color: white;
+      min-height: 44px;
+      padding-top: 12px;
+      padding-bottom: 12px;
+      padding-left: 15px;
+      border-radius: 6px;
+    }
+
+    .md_container code {
+      background-color: #09172211;
+    }
+
+    .md_container pre > code {
+      background-color: transparent;
+    }
+
+    .md_container h1 {
+      opacity: 0.6;
+      color: #091722;
+      font-size: 32px;
+      line-height: 44px;
+      font-weight: 700;
+      margin-bottom: 36px;
+      margin-top: 100px;
+    }
+
+    .md_container h2 {
+      font-family: 'Roboto Mono', sans-serif;
+      color: #091722;
+      font-size: 18px;
+      line-height: 42px;
+      font-weight: 700;
+      text-decoration: none;
+      margin-top: 40px;
+    }
+
+    .md_container h3 {
+      font-family: 'Roboto Mono', sans-serif;
+      color: #091722BB;
+      font-size: 16px;
+      line-height: 30px;
+      font-weight: 700;
+      text-decoration: none;
+      margin-top: 30px;
+    }
+
+    .md_container p {
+      opacity: 1;
+      font-family: 'Roboto Mono', sans-serif;
+      color: #091722AA;
+      font-size: 14px;
+      line-height: 26px;
+      font-weight: 400;
+    }
+
+    .md_container a {
+      border-bottom: 2px dotted hsla(251.51785714285714, 89.60%, 50.98%, 1.00);
+      color: #3d12f2;
+      text-decoration: none;
+      font-weight: 500; 
+    }
+
+@media (max-width: 991px) {
+    /* to be added */     
 }
 
-  .md_container pre {
-  background-color: #21415a;
-  color: white;
-  min-height: 44px;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  padding-left: 15px;
-  border-radius: 6px;
+@media (max-width: 767px) {
+    .md_container h1, 
+    .md_container h2, 
+    .md_container h3, 
+    .md_container p {
+        text-align: left;
+    }
+    
+    .md_container h1 {
+        font-size: 28px;
+    }
+    
+    .md_container pre {
+        text-align: left;
+    }
 }
 
-.md_container code {
-  background-color: #09172211;
-}
+@media (max-width: 479px) {
+    .md_container h1, 
+    .md_container h2, 
+    .md_container h3, 
+    .md_container p,
+    .md_container blockquote {
+        margin-left: 24px;
+        margin-right: 24px;
+        text-align: center;
+    }
 
-.md_container pre > code {
-  background-color: transparent;
-}
-
-.md_container h1 {
-  opacity: 0.6;
-  color: #091722;
-  font-size: 32px;
-  line-height: 44px;
-  font-weight: 700;
-  margin-bottom: 36px;
-  margin-top: 100px;
-}
-
-.md_container h2 {
-  font-family: 'Roboto Mono', sans-serif;
-  color: #091722;
-  font-size: 18px;
-  line-height: 42px;
-  font-weight: 700;
-  text-decoration: none;
-  margin-top: 40px;
-}
-
-.md_container h3 {
-  font-family: 'Roboto Mono', sans-serif;
-  color: #091722BB;
-  font-size: 16px;
-  line-height: 30px;
-  font-weight: 700;
-  text-decoration: none;
-  margin-top: 30px;
-}
-
-.md_container p {
-  opacity: 1;
-  font-family: 'Roboto Mono', sans-serif;
-  color: #091722AA;
-  font-size: 14px;
-  line-height: 26px;
-  font-weight: 400;
-}
-
-.md_container a {
-  border-bottom: 2px dotted hsla(251.51785714285714, 89.60%, 50.98%, 1.00);
-  color: #3d12f2;
-  text-decoration: none;
-  font-weight: 500; 
+    
+    .md_container pre {
+        border-radius: 0px;
+        padding-right: 15px;
+    }
+    
+    .md_container p {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
 }
